--- a/app/app.html
+++ b/app/app.html
@@ -7,9 +7,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.0/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.0/JSXTransformer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script type="text/jsx;harmony=true" src="app.jsx"></script>
   </head>
 
   <body>
   </body>
+
+  <script type="application/javascript" src="build/app.js"></script>
 </html>
