refactor list to own file

--- a/app/app.html
+++ b/app/app.html
@@ -12,5 +12,6 @@
   <body>
   </body>
 
+  <script type="application/javascript" src="build/list.js"></script>
   <script type="application/javascript" src="build/app.js"></script>
 </html>
